# WotLK-Extensions

./: README.md
Docs/: README.md
Docs/Custom DBCs/: OcclusionVolume.cdbc  OcclusionVolumePoint.cdbc  SpellAttributesExtended.cdbc
Patcher/: Main.cpp
WotLKExtensions/: CMakeLists.txt
WotLKExtensions/cmake/: PatchConfig.hpp.in
WotLKExtensions/src/: Main.cpp  Main.hpp  SharedDefines.hpp
WotLKExtensions/src/CDBCMgr/: CDBC.cpp  CDBC.hpp  CDBCMgr.cpp  CDBCMgr.hpp
WotLKExtensions/src/CDBCMgr/CDBCDefs/: OcclusionVolume.cpp  OcclusionVolume.hpp  OcclusionVolumePoint.cpp  OcclusionVolumePoint.hpp  SpellAttributesExtended.cpp  SpellAttributesExtended.hpp
WotLKExtensions/src/Client/: CFormula.cpp  CGReputationInfo.cpp  CGReputationInfo.hpp  CGTooltip.cpp  CGTooltip.hpp  CGlueMgr.cpp  CGlueMgr.hpp  CMissile.cpp  CMissile.hpp  CNetClient.cpp  CVar.cpp  CVar.hpp  ClientServices.cpp  ClientServices.hpp  CustomLua.cpp  CustomLua.hpp  DBClient.cpp  DBClient.hpp  FrameScript.cpp  FrameScript.hpp  MacroConditions.cpp  MacroConditions.hpp  Misc.cpp  Misc.hpp  SStr.hpp  Spell.cpp  Spell.hpp  WoWTime.cpp
WotLKExtensions/src/Data/: DBItemCache.cpp  DBItemCache.hpp  DBNameCache.cpp  DBNameCache.hpp  DBPetitionCache.cpp  DBPetitionCache.hpp  Enums.hpp  MiscAddresses.hpp  Structs.hpp
WotLKExtensions/src/GameObjects/: CGBag.cpp  CGBag.hpp  CGItem.cpp  CGItem.hpp  CGObject.hpp  CGPlayer.cpp  CGPlayer.hpp  CGUnit.cpp  CGUnit.hpp
WotLKExtensions/src/Misc/: DataContainer.cpp  DataContainer.hpp  Logger.cpp  Logger.hpp  Util.cpp  Util.hpp
WotLKExtensions/src/WorldData/: OcclusionVolumeData.cpp  OcclusionVolumeData.hpp  ZoneLightData.cpp  ZoneLightData.hpp
